# binance-rs

./: .gitignore  Cargo.toml  README.md
docs/algo/: README.md
docs/algo/docs/: AlgoCreateAlgoFuturesNewOrderTwapV1Resp.md  AlgoCreateAlgoFuturesNewOrderVpV1Resp.md  AlgoCreateAlgoSpotNewOrderTwapV1Resp.md  AlgoDeleteAlgoFuturesOrderV1Resp.md  AlgoDeleteAlgoSpotOrderV1Resp.md  AlgoGetAlgoFuturesHistoricalOrdersV1Resp.md  AlgoGetAlgoFuturesHistoricalOrdersV1RespOrdersInner.md  AlgoGetAlgoFuturesOpenOrdersV1Resp.md  AlgoGetAlgoFuturesSubOrdersV1Resp.md  AlgoGetAlgoFuturesSubOrdersV1RespSubOrdersInner.md  AlgoGetAlgoSpotHistoricalOrdersV1Resp.md  AlgoGetAlgoSpotHistoricalOrdersV1RespOrdersInner.md  AlgoGetAlgoSpotOpenOrdersV1Resp.md  AlgoGetAlgoSpotSubOrdersV1Resp.md  ApiError.md  FutureAlgoApi.md  SpotAlgoApi.md
docs/cmfutures/: README.md
docs/cmfutures/docs/: CmfuturesDeleteBatchOrdersV1RespInner.md  CmfuturesDeleteBatchOrdersV1RespItem.md  CmfuturesGetContinuousKlinesV1RespInnerInner.md  CmfuturesGetExchangeInfoV1Resp.md  CmfuturesGetExchangeInfoV1RespSymbolsInner.md  CmfuturesGetForceOrdersV1RespItem.md  CmfuturesUpdateBatchOrdersV1ReqBatchOrdersItem.md  CoinMarginedFuturesApi.md  CreateCountdownCancelAllV1Resp.md  CreateLeverageV1Resp.md  CreateOrderV1Resp.md  (+43 more)
docs/convert/: README.md
docs/copytrading/: README.md
docs/margin/: README.md
docs/options/: README.md
docs/pmargin/: README.md
docs/spot/: README.md
docs/subaccount/: README.md
docs/umfutures/: README.md
docs/wallet/: README.md
src/: lib.rs
src/derivatives/: mod.rs
src/umfutures/: mod.rs
(+3174 files in other folders)
