[package]
name = "openxapi-binance"
version = "0.1.0"
edition = "2021"

[lib]
name = "binance"

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
hex = "0.4.3"
hmac = "0.12.1"
openssl = "0.10.72"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_repr = "0.1"
serde_with = { version = "3.12.0", features = ["macros", "json"] }
sha2 = "0.10.8"
url = "2.2"
urlencoding = "2.1.3"
